...
            "value" : "Back"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "返回"
          }
        }
      }
    },
    "a11y_insert_image" : {
      "extractionState" : "stale",
...
            "value" : "List"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "列表"
          }
        }
      }
    },
    "editor_tool_quote" : {
      "extractionState" : "stale",
...
            "value" : "Quote"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "引用"
          }
        }
      }
    },
    "editor_tool_strike" : {
      "extractionState" : "stale",
...
            "value" : "Paragraph Style"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "段落样式"
          }
        }
      }
    },
    "editor_tool_todo" : {
      "extractionState" : "stale",
...
            "value" : "Diary"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日记"
          }
        }
      }
    },
    "index_today" : {
      "extractionState" : "stale",
...
            "value" : "Write"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "写日记"
          }
        }
      }
    },
    "index_yesterday" : {
      "extractionState" : "stale",
...
            "value" : "Save"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "search_all_loc" : {
      "extractionState" : "stale",
...
            "value" : "Search"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
          }
        }
      }
    },
    "settings_auto_loc" : {
      "extractionState" : "stale",
...
